src/policyshadow/data/sample_policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
  annotations:
    policies.kyverno.io/title: Require Non-Root Containers
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        failureAction: Audit
        message: >-
          Containers must run as non-root. Set
          spec.containers[*].securityContext.runAsNonRoot to `true`.
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
